--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,20 @@
-.env/
-__pycache__/
-credentials.json
-old_credentials.json
-token.pickle
-last_form_url.txt
-configs/base.json
-base.json
+node_modules/
+package-lock.json
+
 .env
-*.pyc
-token.gmail.pickle
-venv/
+
+credentials.json
+token.json
+token.gmail.json
+
+*.log
+npm-debug.log*
+
 .DS_Store
+Thumbs.db
+
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
